--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # Base
 PORT=8080
-APP_BASE_URL=https://api.bot.cabcompare.in
-
+APP_BASE_URL=https://nifty100-live-app.onrender.com
 # Zerodha
 KITE_API_KEY=y6yy8wlvd2e8i0n4
 KITE_API_SECRET=ijb8oaji5r3yrmgla6si5kxida4a16vu
