--- a/.env
+++ b/.env
@@ -1,10 +1,34 @@
-# Base
+# =============================
+# Base Configuration
+# =============================
+
 PORT=8080
 APP_BASE_URL=https://nifty100-live-app.onrender.com
-# Zerodha
+
+# =============================
+# Zerodha Kite Connect Credentials
+# =============================
+
+# Your API key from the Zerodha developer dashboard
 KITE_API_KEY=y6yy8wlvd2e8i0n4
-KITE_API_SECRET=ijb8oaji5r3yrmgla6si5kxida4a16vu
+
+# Your API secret from the Zerodha developer dashboard
+KITE_API_SECRET=ijb8oajis5r3yrmgla6si5kxida4a16vu
+
+# Access token is generated after login. Leave blank initially.
+# Once you log in and callback succeeds, this gets filled in manually or by the app.
 KITE_ACCESS_TOKEN=
 
-# Universe (comma separated NSE trading symbols)
-NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS,POWERGRID,NTPC,ONGC,COALINDIA,JSWSTEEL,TATASTEEL,HINDALCO,CIPLA,DRREDDY,SUNPHARMA,BAJAJFINSV,LTIM,TITAN,HEROMOTOCO,EICHERMOT,BAJAJ-AUTO,TVSMOTOR,BRITANNIA,DMART,SBILIFE,ICICIPRULI,HDFCLIFE,PIDILITIND,GRASIM,INDUSINDBK,TATACONSUM,BHARATIARTL,MARUTI,M&M,SHREECEM,NESTLEIND,TECHM,DIVISLAB,DLF,COFORGE,ABB,ABBOTINDIA,BPCL,IOC,SRF,BERGEPAINT,BEL,SIEMENS,INDIGO,PNB,IDFCFIRSTB,BANDHANBNK,UBL,DABUR,AUROPHARMA,ALKEM,APOLLOHOSP,ICICIGI,BAJAJHLDNG,LODHA,CONCOR,TORNTPOWER,TORNTPHARM,MPHASIS,NAUKRI,LTTS,TATAMOTORS,AMBUJACEM,ACC,GUJGAS,INDHOTEL,IRCTC,IRFC,IOB,IDBI,SAIL
+# =============================
+# Stock Universe (NIFTY 100)
+# =============================
+
+# Comma-separated list of trading symbols (no spaces!)
+NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS,POWERGRID,TITAN,ONGC,NTPC,TECHM,COALINDIA,JSWSTEEL,SUNPHARMA,MARUTI,BAJAJFINSV,INDUSINDBK,TATASTEEL,BHARTIARTL,GRASIM,ADANITRANS,HEROMOTOCO,SHREECEM,SBILIFE,DRREDDY,BPCL,EICHERMOT,CIPLA,UPL,HINDPETRO,ICICIPRULI,HAVELLS,BAJAJ-AUTO,DIVISLAB,HINDALCO,DLF,DMART,PIDILITIND,LTIM,HDFCLIFE,TATAMOTORS,TATACONSUM,BRITANNIA,NAUKRI,BANDHANBNK,BAJAJHLDNG,GAIL,ABBOTINDIA,SBICARD,PNB,BIOCON,INDIGO,MCDOWELL-N,IOC,MOTHERSON,BERGEPAINT,TORNTPOWER,CHOLAFIN,PIIND,SYNGENE,GLAND,ICICIGI,TATACHEM,BOSCHLTD,PEL,HINDZINC,LUPIN,DABUR,TVSMOTOR,AUROPHARMA,GODREJCP,MANAPPURAM,RECLTD,PFC,BEL,ASHOKLEY,LICHSGFIN,SRF,BANKBARODA,IDFCFIRSTB,HONAUT
+
+# =============================
+# Optional Settings
+# =============================
+
+# For debugging: set this to true to get more logs in console
+DEBUG=true
