--- a/.env
+++ b/.env
@@ -1,34 +1,11 @@
-# =============================
-# Base Configuration
-# =============================
-
+# Base
 PORT=8080
 APP_BASE_URL=https://nifty100-live-app.onrender.com
 
-# =============================
-# Zerodha Kite Connect Credentials
-# =============================
-
-# Your API key from the Zerodha developer dashboard
+# Zerodha
 KITE_API_KEY=y6yy8wlvd2e8i0n4
-
-# Your API secret from the Zerodha developer dashboard
-KITE_API_SECRET=ijb8oajis5r3yrmgla6si5kxida4a16vu
-
-# Access token is generated after login. Leave blank initially.
-# Once you log in and callback succeeds, this gets filled in manually or by the app.
+KITE_API_SECRET=ijb8oaji5r3yrmgla6si5kxida4a16vu
 KITE_ACCESS_TOKEN=
 
-# =============================
-# Stock Universe (NIFTY 100)
-# =============================
-
-# Comma-separated list of trading symbols (no spaces!)
-NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS,POWERGRID,TITAN,ONGC,NTPC,TECHM,COALINDIA,JSWSTEEL,SUNPHARMA,MARUTI,BAJAJFINSV,INDUSINDBK,TATASTEEL,BHARTIARTL,GRASIM,ADANITRANS,HEROMOTOCO,SHREECEM,SBILIFE,DRREDDY,BPCL,EICHERMOT,CIPLA,UPL,HINDPETRO,ICICIPRULI,HAVELLS,BAJAJ-AUTO,DIVISLAB,HINDALCO,DLF,DMART,PIDILITIND,LTIM,HDFCLIFE,TATAMOTORS,TATACONSUM,BRITANNIA,NAUKRI,BANDHANBNK,BAJAJHLDNG,GAIL,ABBOTINDIA,SBICARD,PNB,BIOCON,INDIGO,MCDOWELL-N,IOC,MOTHERSON,BERGEPAINT,TORNTPOWER,CHOLAFIN,PIIND,SYNGENE,GLAND,ICICIGI,TATACHEM,BOSCHLTD,PEL,HINDZINC,LUPIN,DABUR,TVSMOTOR,AUROPHARMA,GODREJCP,MANAPPURAM,RECLTD,PFC,BEL,ASHOKLEY,LICHSGFIN,SRF,BANKBARODA,IDFCFIRSTB,HONAUT
-
-# =============================
-# Optional Settings
-# =============================
-
-# For debugging: set this to true to get more logs in console
-DEBUG=true
+# Universe (NIFTY 100 list)
+NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS,POWERGRID
