--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT=8080
 APP_BASE_URL=https://nifty100-live-app.onrender.com
 
-# Zerodha
+# Zerodha credentials
 KITE_API_KEY=y6yy8wlvd2e8i0n4
 KITE_API_SECRET=ijb8oaji5r3yrmgla6si5kxida4a16vu
 KITE_ACCESS_TOKEN=
 
-# Universe (NIFTY 100 list)
-NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS,POWERGRID
+# Universe (your stock list)
+NIFTY100=HAL,INFY,TCS,RELIANCE,ITC,HDFCBANK,ICICIBANK,SBIN,LT,BAJFINANCE,AXISBANK,ASIANPAINT,KOTAKBANK,HCLTECH,WIPRO,ULTRACEMCO,ADANIENT,ADANIGREEN,ADANIPORTS
